--- a/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.scss
+++ b/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.scss
@@ -42,6 +42,14 @@
       color: black;
     }
 
+    .offers-container {
+      padding: 32px;
+
+      @include media-breakpoint('lt-md') {
+        padding: 16px;
+      }
+    }
+
     .mat-mdc-card {
       border: 1px solid map-get($accent-palette, 'A200') !important;
       border-radius: 0px;
@@ -50,8 +58,6 @@
       .provided-by-image {
         background: white;
         position: relative;
-        padding: 4px 16px;
-        border-radius: 16px;
       }
 
       .check-icon {
@@ -64,7 +70,6 @@
       }
 
       .offer-title {
-        border-left: 2px solid map-get($primary-palette, 300);
         font-size: 20px;
         font-family: 'Open Sans', Arial;
         font-weight: 600;
@@ -79,6 +84,7 @@
 
       .responsive-image {
         width: 100%;
+        border-radius: 4px;
       }
 
       .important-text {
