--- a/src/app/shared/components/layout/layout.component.html
+++ b/src/app/shared/components/layout/layout.component.html
@@ -4,7 +4,7 @@
         <div fxLayout="row" fxLayoutAlign="start center">
             <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
     
-            <span fxHide.lt-md routerLink="/guides/{{ currentPartnerId }}" class="pointer">Hopper Cloud Airlines - Angular SDK - {{ version }}</span>
+            <span fxHide.lt-md routerLink="/guides/{{ currentPartnerId }}" class="pointer">HTS - CFAR SDK - {{ version }}</span>
             <span fxHide.gt-sm routerLink="/guides/{{ currentPartnerId }}" class="pointer">{{ version }}</span>
         </div>
     
