--- a/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.html
+++ b/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.html
@@ -85,6 +85,8 @@
         >
           <img
             class="responsive-image"
+            alt="Offer banner image"
+            aria-label="Offer banner image"
             src="{{ imageBasePath || '' }}assets/offer-banner-image.jpg"
           />
         </div>
