--- a/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.html
+++ b/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.html
@@ -141,7 +141,7 @@
                               : offer?.currency
                               : 'symbol'
                               : undefined
-                              : currentLang)
+                              : currentCulturalLang)
                         }
                 }}
                                 "
@@ -171,7 +171,7 @@
                               : offer?.currency
                               : 'symbol'
                               : undefined
-                              : currentLang)
+                              : currentCulturalLang)
                         }
                 }}"
                 innerHtml="{{
@@ -184,7 +184,7 @@
                               : offer?.currency
                               : 'symbol'
                               : undefined
-                              : currentLang)
+                              : currentCulturalLang)
                         }
                 }}"
               ></div>
