--- a/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.html
+++ b/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.html
@@ -96,7 +96,7 @@
                         : offer?.currency
                         : 'symbol'
                         : undefined
-                        : currentCulturalLang)
+                        : currentLang)
                   }
           }}
                     "
@@ -120,7 +120,7 @@
                           : offer?.currency
                           : 'symbol'
                           : undefined
-                          : currentCulturalLang)
+                          : currentLang)
                     }
             }}
                         "
@@ -143,7 +143,7 @@
                             : offer?.currency
                             : 'symbol'
                             : undefined
-                            : currentCulturalLang)
+                            : currentLang)
                       }
               }}
                             "
@@ -168,7 +168,7 @@
                             : offer?.currency
                             : 'symbol'
                             : undefined
-                            : currentCulturalLang)
+                            : currentLang)
                       }
               }}"
               innerHtml="{{
@@ -181,7 +181,7 @@
                             : offer?.currency
                             : 'symbol'
                             : undefined
-                            : currentCulturalLang)
+                            : currentLang)
                       }
               }}"
             ></div>
